--- a/src/auction_contract_backend/Cargo.toml
+++ b/src/auction_contract_backend/Cargo.toml
@@ -1,14 +1,14 @@
+
+
 [package]
-name = "auction_contract_backend"
+name = "auction_contract_backend" 
 version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+edition = "2021" 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib"] 
 
 [dependencies]
+ic-cdk = "0.13"
+ic-cdk-macros = "0.13"
 candid = "0.10"
-ic-cdk = "0.17"
-ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
+serde = { version = "1.0", features = ["derive"] }
